JumpScript/tests/baselines/reference/selfReferencingFile3.errors.txt
tests/cases/compiler/selfReferencingFile3.jump(1,21): error TS1006: A file cannot have a reference to itself.


==== tests/cases/compiler/selfReferencingFile3.jump (1 errors) ====
    ///<reference path='./selfReferencingFile3.jump'/>
                        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1006: A file cannot have a reference to itself.
    
    class selfReferencingFile3 {
    
    }